src/objects/Mapping__c.object
<CustomObject>
    <description>Data Dictionary Tool:  Field level mapping for the &quot;system to system&quot; integrations</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Can be used to describe more complex mapping logic.</description>
        <inlineHelpText>Can be used to describe more complex mapping logic.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <description>Interface for this field level mapping</description>
        <label>Interface</label>
        <referenceTo>Interface__c</referenceTo>
        <relationshipLabel>Mappings</relationshipLabel>
        <relationshipName>Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <description>Source system field for the integration mapping</description>
        <label>Source Field</label>
        <referenceTo>ObjectField__c</referenceTo>
        <relationshipLabel>Mappings</relationshipLabel>
        <relationshipName>Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>Source_Field__r.UniqueID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <description>Target system field for the integration mapping... If the mapping is complex then add the logic under the description..</description>
        <label>Target Field</label>
        <referenceTo>ObjectField__c</referenceTo>
        <relationshipLabel>Mappings (Target Field)</relationshipLabel>
        <relationshipName>Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <formula>Target_Field__r.UniqueID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transformation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mapping requires some data transformation by the integration layer</description>
        <inlineHelpText>Mapping requires some data transformation by the integration layer</inlineHelpText>
        <label>Transformation</label>
        <type>Checkbox</type>
    </fields>
    <label>Mapping</label>
    <nameField>
        <displayFormat>MAP-{00000}</displayFormat>
        <label>MapID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>